# ValidatorForge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  EVALUATION.md  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/validatorforge-ai/: Cargo.toml
crates/validatorforge-ai/src/: advisor.rs  lib.rs  llm.rs
crates/validatorforge-api/: Cargo.toml
crates/validatorforge-api/src/: lib.rs  mutation.rs  query.rs  schema.rs  subscription.rs  types.rs
crates/validatorforge-core/: Cargo.toml
crates/validatorforge-core/src/: agent.rs  config.rs  engine.rs  error.rs  event.rs  lib.rs  ports.rs  saga.rs
crates/validatorforge-infra/: Cargo.toml
crates/validatorforge-infra/migrations/: 0001_init.sql
crates/validatorforge-infra/src/: agent.rs  clock.rs  events.rs  iac.rs  lib.rs  pg.rs  repo.rs
crates/validatorforge-node/: Cargo.toml
crates/validatorforge-node/benches/: saga_bench.rs
crates/validatorforge-node/src/: config.rs  lib.rs  main.rs  plan.rs  startup.rs  telemetry.rs
crates/validatorforge-resilience/: Cargo.toml
crates/validatorforge-resilience/src/: breaker.rs  bulkhead.rs  clock.rs  lib.rs  ratelimit.rs  retry.rs  timeout.rs
crates/validatorforge-types/: Cargo.toml
crates/validatorforge-types/src/: error.rs  health.rs  ids.rs  lib.rs  node.rs  ops.rs
monitoring/: prometheus.yml
postman/: ValidatorForge.postman_collection.json
