[package]
name = "validatorforge-resilience"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reusable, generic resilience primitives for ValidatorForge: injectable clock, timeout, jittered retry, circuit breaker, token-bucket rate limiter and bulkhead. Timing is generic over a Clock so every primitive is deterministically testable."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
