[package]
name = "validatorforge-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure domain types for ValidatorForge: validator-node identities, the node lifecycle state machine, health snapshots, and ops/deployment value objects. No I/O, no framework dependencies."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
